2002-07-03  Federico Mena Quintero  <federico@ximian.com>

	* gedit.schemas: Rewrote the schema file for the new preferences
	setup.  Should be the last part to fix #84535.

2002-07-03  Paolo Maggi  <maggi@athena.polito.it>

	* configure.in: now gedit depends on eel-2.0 

2002-06-19  Paolo Maggi  <maggi@athena.polito.it>

	[ gedit 2.0.0 released ]

2002-06-19  Paolo Maggi  <maggi@athena.polito.it>

	* help/C/gedit.xml
	* help/C/gedit-C.xml
	* help/C/figures/gedit_window.png: updated (thanks to 
	Irene Ryan)

2002-06-14  Paolo Maggi  <maggi@athena.polito.it>

	* configure.in:
	* README: bump version to 2.0.0

	* AUTHORS: added Federico

2002-06-10  Paolo Maggi  <maggi@athena.polito.it>

	[ gedit 1.199.0 released ]

2002-06-10  Paolo Maggi  <maggi@athena.polito.it>

	* configure.in: bump version to 1.199.0, requirements updated

2002-06-10  Naba Kumar <kh_naba@users.sourceforge.net>

	* configure.in: Added hi in ALL_LINGUAS
	
2002-05-31  Paolo Maggi  <maggi@athena.polito.it>

	[ gedit 1.121.1 released ]

2002-05-31  Paolo Maggi  <maggi@athena.polito.it>

	* configure.in: bump version to 1.121.1
 
2002-05-27  Paolo Maggi  <maggi@athena.polito.it>

	[ gedit 1.121.0 released ]

2002-05-27  Paolo Maggi  <maggi@athena.polito.it>

	* configure.in: bump version to 1.121.0, requirements updated

2002-05-27  James Willcox  <jwillcox@cs.indiana.edu>

	* README: Small changes in wording
	* HACKING: ditto

2002-05-27  Yanko Kaneti  <yaneti@delcera.com>

	* configure.in: (ALL_LINGUAS)  Added Bulgarian (bg).

2002-05-21  Paolo Maggi  <maggi@athena.polito.it>

	[ gedit 1.120.0 released ]

2002-05-21  Paolo Maggi  <maggi@athena.polito.it>

	* configure.in: bump version to 1.120.0, 
	require intltool 0.21

	* README: Updated (1.119.0 -> 1.120.0)

	* Makefile.am: now make distcheck should work

2002-05-20  Paolo Maggi  <maggi@athena.polito.it>

	* gedit.schemas: fixed bug #81974

2002-05-13  Paolo Maggi  <maggi@athena.polito.it>

	[ gedit 1.119.0 released ]
